demoapp/istio/frontend-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  trafficPolicy: # Apply to all ports
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - demoapp-gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: frontend
            subset: v1
            port:
              number: 58080
